@@ -1,48 +1,41 @@
 use strict;
 use warnings;
 
-use Test::More tests => 4;
+use Test::More tests => 7;
 
 use HTML::FormFu;
 use Storable qw( dclone );
-SKIP:
-{
-    skip
-        "Need to figure out alternative way to set default_args() on parent classes\n"
-        . "after the move to Moose",
-        4;
 
-    my $form = HTML::FormFu->new(
-        { tt_args => { INCLUDE_PATH => 'share/templates/tt/xhtml' } } );
+my $form = HTML::FormFu->new(
+    { tt_args => { INCLUDE_PATH => 'share/templates/tt/xhtml' } } );
 
-    $form->default_args( {
-            elements => {
-                Block  => { attributes => { class => 'block' } },
-                Multi  => { label      => 'My Label' },
-                _Field => { comment    => 'My Comment' },
-            },
-        } );
+$form->load_config_file('t-aggregate/form/default_args_isa.yml');
 
-# take a deep copy of element_defaults, so we can check they've not been butchered, later
+is( $form->get_element({ type => 'Fieldset' })->attrs->{class}, 'does_block' );
 
-    my $default_args = dclone( $form->default_args );
+# Multi gets default_args for Block, Field, Multi
+my $multi = $form->get_all_element({ type => 'Multi' });
+is( $multi->attrs->{class}, 'does_block' );
+is( $multi->comment, 'Does Field' );
+is( $multi->label, 'My Multi' );
 
-    $form->populate( {
-            elements => [ {
-                    type => 'Multi',
-                    name => 'foo',
-                },
-            ],
-        } );
+# Text gets default_args for Field, Input
+my $text = $form->get_field({ name => 'bar' });
+is( $text->comment, 'Does Field' );
+is( $text->id, 'bar' );
 
-    my $multi = $form->get_all_element( { type => 'Multi' } );
-
-    like( $multi, qr/class="[^"]*block[^"]*"/ );
-
-    is( $multi->label, 'My Label' );
-
-    is( $multi->comment, 'My Comment' );
-
-    # original default_args hashref hasn't been butchered
-    is_deeply( $default_args, $form->default_args );
-}
+is ( "$form", <<HTML );
+<form action="" method="post">
+<fieldset class="does_block">
+<div class="multi comment label">
+<label>My Multi</label>
+<span class="does_block elements">
+<input name="foo.bar" type="text" id="bar" />
+</span>
+<span class="comment">
+Does Field
+</span>
+</div>
+</fieldset>
+</form>
+HTML
